Imp2Parser.java
/* Imp2Parser.java */
/* Generated By:JavaCC: Do not edit this line. Imp2Parser.java */
package li2.plp.imperative2.parser;

import li2.plp.expressions1.util.*;
import li2.plp.expressions2.expression.*;
import li2.plp.imperative1.command.*;
import li2.plp.imperative1.declaration.*;
import li2.plp.imperative1.memory.*;
import li2.plp.imperative2.*;
import li2.plp.imperative2.command.*;
import li2.plp.imperative2.declaration.*;
import li2.plp.imperative2.memory.*;
import java.util.*;

public class Imp2Parser implements Imp2ParserConstants {

    public static void main(String args[]) {
            Imp2Parser parser;
            ListaValor entrada = new ListaValor();
            if (args.length == 0) {
                System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Reading from standard input . . .");
                parser = new Imp2Parser(System.in);
            } else{
                System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Reading from file " + args[0] + " . . .");
                try {
                        parser = new Imp2Parser(new java.io.FileInputStream(args[0]));
                } catch (java.io.FileNotFoundException e) {
                        System.out.println("Java Parser Version 1.0.2:  File " + args[0] + " not found.");
                        return;
                }

                List valores = new LinkedList();
                for(int i=1;i<args.length;i++)
                {
                        String parametro = args[i];

                        try {
                                Integer inteiro = Integer.valueOf(parametro);
                                valores.add(new ValorInteiro(inteiro.intValue()));
                                continue;
                        } catch(NumberFormatException e) {

                        }

                        if(parametro.equalsIgnoreCase("true")
                            || parametro.equalsIgnoreCase("false")) {
                                Boolean booleano = Boolean.valueOf(parametro);
                                valores.add(new ValorBooleano(booleano.booleanValue()));
                        } else {
                            valores.add(new ValorString(parametro));
                        }
                }
                  entrada = criaListaValor(valores);
            }

            try {
            Programa programa = parser.Input();
            System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Imperativa2 program parsed successfully.");

            if(programa.checaTipo(new ContextoCompilacaoImperativa(entrada))) {
                ListaValor saida = programa.executar(new ContextoExecucaoImperativa2(entrada));
                System.out.println(saida);
            }
            else {
                System.out.println("Erro de tipo");
            }
        } catch (Exception e) {
            System.out.println("Imperativa 2 PLP Parser Version 0.0.1:  Encountered errors during parse.");
            e.printStackTrace();
        }
        }

        public static ListaValor criaListaValor(List valores) {
                if(valores.size() == 0) {
                        return new ListaValor();
                }

                Valor primeiro = (Valor) valores.get(0);
                valores.remove(0);
                return new ListaValor(primeiro, criaListaValor(valores));
    }

  static final public Programa Input() throws ParseException {
    trace_call("Input");
    try {
Programa retorno;
      retorno = PPrograma();
      jj_consume_token(0);
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Input");
    }
}

  static final public Programa PPrograma() throws ParseException {
    trace_call("PPrograma");
    try {
Comando retorno;
      retorno = PComando();
{if ("" != null) return new Programa(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PPrograma");
    }
}

  static final public Comando PComando() throws ParseException {
    trace_call("PComando");
    try {
Comando retorno;
      if (jj_2_1(2147483647)) {
        retorno = PSequenciaComando();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMAND_SKIP:
        case WHILE:
        case READ:
        case WRITE:
        case IF:
        case CALL:
        case IDENTIFIER:
        case LPAREN:
        case LBRACE:{
          retorno = PComandoSimples();
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PComando");
    }
}

  static final public SequenciaComando PSequenciaComando() throws ParseException {
    trace_call("PSequenciaComando");
    try {
Comando c1;
        Comando c2;
      c1 = PComandoSimples();
      jj_consume_token(SEMICOLON);
      c2 = PComando();
{if ("" != null) return new SequenciaComando(c1, c2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PSequenciaComando");
    }
}

  static final public IO PIO() throws ParseException {
    trace_call("PIO");
    try {
IO retorno;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case READ:{
        retorno = PRead();
        break;
        }
      case WRITE:{
        retorno = PWrite();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PIO");
    }
}

  static final public Read PRead() throws ParseException {
    trace_call("PRead");
    try {
Id id;
      jj_consume_token(READ);
      jj_consume_token(LPAREN);
      id = PId();
      jj_consume_token(RPAREN);
{if ("" != null) return new Read (id);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PRead");
    }
}

  static final public Write PWrite() throws ParseException {
    trace_call("PWrite");
    try {
Expressao exp;
      jj_consume_token(WRITE);
      jj_consume_token(LPAREN);
      exp = PExpressao();
      jj_consume_token(RPAREN);
{if ("" != null) return new Write(exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PWrite");
    }
}

  static final public IfThenElse PIfThenElse() throws ParseException {
    trace_call("PIfThenElse");
    try {
Expressao expressao;
        Comando comandoThen;
        Comando comandoElse;
      jj_consume_token(IF);
      expressao = PExpressao();
      jj_consume_token(THEN);
      comandoThen = PComando();
      jj_consume_token(ELSE);
      comandoElse = PComando();
{if ("" != null) return new IfThenElse (expressao, comandoThen, comandoElse);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PIfThenElse");
    }
}

  static final public While PWhile() throws ParseException {
    trace_call("PWhile");
    try {
Expressao expressao;
        Comando comando;
      jj_consume_token(WHILE);
      expressao = PExpressao();
      jj_consume_token(DO);
      comando = PComando();
{if ("" != null) return new While(expressao, comando);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PWhile");
    }
}

  static final public Skip PSkip() throws ParseException {
    trace_call("PSkip");
    try {

      jj_consume_token(COMAND_SKIP);
{if ("" != null) return new Skip();}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PSkip");
    }
}

  static final public Atribuicao PAtribuicao() throws ParseException {
    trace_call("PAtribuicao");
    try {
Id id;
        Expressao exp;
      id = PId();
      jj_consume_token(ATTRIB);
      exp = PExpressao();
{if ("" != null) return new Atribuicao(id, exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PAtribuicao");
    }
}

  static final public Id PId() throws ParseException {
    trace_call("PId");
    try {
Token token;
      token = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Id(token.toString());}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PId");
    }
}

  static final public Valor PValorInteiro() throws ParseException {
    trace_call("PValorInteiro");
    try {
Token token;
      token = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return new ValorInteiro(Integer.parseInt(token.toString()));}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorInteiro");
    }
}

  static final public Valor PValorBooleano() throws ParseException {
    trace_call("PValorBooleano");
    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FALSE:{
        jj_consume_token(FALSE);
{if ("" != null) return new ValorBooleano(false);}
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
{if ("" != null) return new ValorBooleano(true);}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorBooleano");
    }
}

  static final public Valor PValorString() throws ParseException {
    trace_call("PValorString");
    try {
Token token;
      token = jj_consume_token(STRING_LITERAL);
String tokenStr = token.toString();
                tokenStr = tokenStr.substring(1,tokenStr.length()-1);
                {if ("" != null) return new ValorString(tokenStr);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorString");
    }
}

  static final public Valor PValorDate() throws ParseException {
    trace_call("PValorDate");
    try {
Token token;
    Date date;
      token = jj_consume_token(DATE_LITERAL);
String tokenStr = token.toString();
                String[] partOfDate = tokenStr.split("[/-]");
        int day, month, year;

        if(partOfDate[0].length() == 4) {
            year = Integer.parseInt(partOfDate[0]);
            month = Integer.parseInt(partOfDate[1]);
            day = Integer.parseInt(partOfDate[2]);
        }else{
            day = Integer.parseInt(partOfDate[0]);
            month = Integer.parseInt(partOfDate[1]);
            year = Integer.parseInt(partOfDate[2]);
        }
        date = new Date(year, month, day);
        {if ("" != null) return new ValorDate(date);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValorDate");
    }
}

  static final public Valor PValor() throws ParseException {
    trace_call("PValor");
    try {
Valor retorno;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER_LITERAL:{
        retorno = PValorInteiro();
        break;
        }
      case TRUE:
      case FALSE:{
        retorno = PValorBooleano();
        break;
        }
      case STRING_LITERAL:{
        retorno = PValorString();
        break;
        }
      case DATE_LITERAL:{
        retorno = PValorDate();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PValor");
    }
}

  static final public Expressao PExpMenos() throws ParseException {
    trace_call("PExpMenos");
    try {
Expressao retorno;
      jj_consume_token(MINUS);
      retorno = PExpressao();
{if ("" != null) return new ExpMenos(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpMenos");
    }
}

  static final public Expressao PExpNot() throws ParseException {
    trace_call("PExpNot");
    try {
Expressao retorno;
      jj_consume_token(NOT);
      retorno = PExpressao();
{if ("" != null) return new ExpNot(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpNot");
    }
}

  static final public Expressao PExpLength() throws ParseException {
    trace_call("PExpLength");
    try {
Expressao retorno;
      jj_consume_token(LENGTH);
      retorno = PExpressao();
{if ("" != null) return new ExpLength(retorno);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpLength");
    }
}

  static final public Expressao PExpPrimaria() throws ParseException {
    trace_call("PExpPrimaria");
    try {
Expressao retorno;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        retorno = PId();
        break;
        }
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case STRING_LITERAL:
      case DATE_LITERAL:{
        retorno = PValor();
        break;
        }
      case LPAREN:{
        jj_consume_token(LPAREN);
        retorno = PExpressao();
        jj_consume_token(RPAREN);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpPrimaria");
    }
}

  static final public Expressao PExpUnaria() throws ParseException {
    trace_call("PExpUnaria");
    try {
Expressao retorno;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MINUS:{
        retorno = PExpMenos();
        break;
        }
      case NOT:{
        retorno = PExpNot();
        break;
        }
      case LENGTH:{
        retorno = PExpLength();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpUnaria");
    }
}

  static final public Expressao PExpBinaria() throws ParseException {
    trace_call("PExpBinaria");
    try {
Expressao retorno, param2;
      if (jj_2_2(2147483647)) {
        retorno = PExpConcat();
      } else if (jj_2_3(2147483647)) {
        retorno = PExpSub();
      } else if (jj_2_4(2147483647)) {
        retorno = PExpAnd();
      } else if (jj_2_5(2147483647)) {
        retorno = PExpOr();
      } else if (jj_2_6(2147483647)) {
        retorno = PExpEquals();
      } else if (jj_2_7(2147483647)) {
        retorno = PExpSoma();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return retorno;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("PExpBinaria");
    }
}
